[tool.poetry]
name = "topolun_brain_games"
version = "2.2.1"
description = "Пакет содержит набо игр. 'brain-even' проверка на четность, 'brain-calc' игра в калькулятор, 'brain-gcd' наибольший общий делитель, 'brain-progression' арифметическая прогрессия, 'brain-prime' простое число. Для запуска игры наберите ее название из описания "
authors = ["Topolun <vik83tu@yandex.ru>"]
packages = [  { include = "brain_games" }, ]

classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Education :: Testing"
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = 'private'
url = 'https://github.com/Topolun/python-project-lvl1.git'
